--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -34,11 +34,12 @@ p#showmarktxt {
 .uppercase {
 	text-transform:uppercase;
 	}
-iframe {
+#success iframe {
 	width:100%;
-	height:100%;
-	margin:0;
+	min-height:600px;
+	margin:0 auto;
 	overflow:visible;
+	padding:32px;
 	}
 div#selected {
 	width:100%;
@@ -1036,7 +1037,7 @@ label.hasinfo {
 	}
 /*SCROLL*/
 #scrollone {
-	overflow: scroll;
+	/*overflow: scroll;*/
 	max-height:300px;
 	margin:auto 5%;
 	overflow:auto;
