--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -57,9 +57,17 @@ object#selected {
     -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
     box-shadow: 0 0px 0px rgba(0,0,0,0);
 	}
+.glyphicon {
+	top: 2px;
+	}
 .subtle {
 	vertical-align: text-top;
 	display: inline-block;
+	border-radius: .19em;
+	}
+.label.subtle {
+	padding-top:.35em;
+	padding-bottom:.35em;
 	}
 #dashboardmain .img-thumbnail, #dashboardmain .thumbnail {
     margin: 0 auto;
@@ -1234,6 +1242,78 @@ button#moreoptionsbtn {
 	float:none;
 	max-width:600px;
 	margin:0 auto;
+	}
+/*toggle button*/
+#designwithtext .required {
+	vertical-align: text-bottom;
+	margin-right:1em;
+	}
+#designwithtext .instructions {
+	display:inline-block;
+	vertical-align: text-bottom;
+    margin-right: .4em;
+	font-weight:400;
+	}
+div[role="switch"] {
+	display:inline-block;
+	}
+#on {
+	margin-left: 5px;
+	color:#fff;
+	}
+#off {
+	margin-left: 7px;
+	color:#fff;
+	}
+#costsavingoptions {
+	color:#808080;
+	}
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 64px;
+	height: 38px;
+	margin-bottom:0;
+	margin-top:1.5em;
+	margin-bottom: -.09em;
+	}
+.switch input { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+	}
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+	padding-top: 10px;
+	border-radius: 2px;
+	}
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 28px;
+	width: 28px;
+	left: 5px;
+	bottom: 5px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+	border-radius: 1px;
+	}
+input:checked + .slider {
+	background-color: #5bc0de;
+	}
+input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
 	}
 /* MODALS*/
 .modal-content {
