Gridview ALL -- Checkbox Functions
User can select a classname or multiple classnames then check a top row criteria to apply it to the selected Classnames.
User can select a top row criteria and have it apply to all classnames.

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -23,7 +23,7 @@ body {
 	}
 p {
     margin-bottom: .7em;
-    line-height: 1.19em;
+    line-height: 1.5em;
 	}
 p#showmarktxt {
 	font-family: Palatino, Garamond, Bookman, Avant Garde;
@@ -2077,6 +2077,9 @@ a.footer-brand {
 		}
 	.form-check {
     	padding-left: 50px;
+		}
+	#gridview .form-check {
+    	padding-left: 0;
 		}
 }
 @media (max-width: 1199px) {
