--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -599,6 +599,9 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
     color: #808080;
 	text-align:center;
 	}
+span#filingsheader {
+	line-height: 39px;
+	}
 #announce {
 	background-color: #D9D9D6;
 	-webkit-border-top-right-radius:3px;
@@ -1300,6 +1303,8 @@ button#moreoptionsbtn {
 	background-color:#007A33;
 	margin-left: 1em;
 	margin-top: .07em;
+	position:relative;
+	float:right;
 	}
 #reviewapplication .btn-success.fill {
 	display:inline-block;
