Review Owner + Misc.
Updated '.lead' class to '.leadtext' class: BS has native .lead class which was over-riding, removed 2 lines of local styling from Dashboard, Owner Info - Review is a new page for JB and JG.

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1027,20 +1027,23 @@ label a:hover {
     background-color: #004C97;
     color: #fff;
 	}
-.lead {
+.leadtext {
     margin-top: 30px;
     margin-bottom: 20px;
     padding: 8px 0 8px 0;
-	width:100%;
 	}
-#payment .lead {
+#editowner .leadtext {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    padding: 8px 15px 8px 15px;
+	}
+#payment .leadtext {
 	font-size:inherit;
 	}
-#reviewapplication .lead {
+#reviewapplication .leadtext {
 	margin-top:0;
 	}
 p#lead {
-	font-size:.761905em;
 	margin-bottom:0;
 	font-weight:600!important;
 	}
@@ -1081,6 +1084,17 @@ label {
 	margin-bottom: .6em;
 	line-height: 1.5em;
 	}
+.bluedit{
+    position:absolute;
+	top: 31%;
+	right: 10%;
+    outline: none;
+	color:#009CDE;
+	margin-left:-40px;
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+}
 label.save {
 	margin-top: .4em;
 	}
@@ -1175,7 +1189,27 @@ label.disabled span {
 	}
 .inlinebuttons#prevnxt {
 	width:200px;
-	margin-right: 0px;
+	margin-right: 0;
+	}
+#editowner .inlinebuttons {
+	margin-right: 0;
+	margin-left:0;
+	padding-right:0;
+	}
+#editowner .btn-success.add {
+    margin-top: 1.99993em;
+	}
+#editowner .btn-group {
+	width:40px;
+	}
+#editowner .btn-group .close {
+	padding-left:.2em;
+	}
+#editowner .btn-success {
+    padding: 5px 5px;
+	}
+#editowner .btn-group > .btn-group:first-child:not(:last-child) > .btn:last-child {
+	border-radius: 3px;
 	}
 .inlinebuttons button {
 	margin:0 auto;
@@ -1297,6 +1331,7 @@ button#moreoptionsbtn {
 	}
 .btn.add, .btn-success.add  {	
 	margin-top: 1.91em;
+	border: none;
 	}
 .btn.fill, .btn-success.fill, .btn-default.fill  {	
 	margin:0 auto;
@@ -1477,6 +1512,10 @@ div.round {
 	margin-top: 2.9em;
 	border: none!important;
 	}
+.btn-success.add.ctr.right {
+	float: right;
+    margin: 0;
+	}
 #basisabde .btn-success.add.ctr {
 	margin-top: 0;
 	margin-bottom:2em;
@@ -1504,6 +1543,13 @@ div[role="heading"] button {
 	font-weight:600;
 	outline-offset: 4px;
 	color: #333;
+	}
+#editowner .Accordion-panel .Accordion-trigger {
+	margin-top:.5em;
+	font-weight:400;
+	}
+#editowner .Accordion {
+	position:relative;
 	}
 .Accordion-trigger.link {
     color: #337ab7;
@@ -1854,28 +1900,45 @@ button[type=submit] {
 	min-height:400px;
 	max-width: 100%;
 	}
-/* START GSselected / Home panel */
-#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading h4, #dashboardmain .panel-heading p {
+/* START GSselected, Dashboard, Editowner panels */
+#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading h4, #dashboardmain .panel-heading p, #editowner .panel-heading h4, #editowner .panel-heading p {
 	display:inline-block;
 	font-size: 1.3em;
 	}
-#gsselected span.weight600, #dashboardmain span.weight600 {
+#gsselected span.weight600, #dashboardmain span.weight600, #editowner span.weight600 {
 	color:#333;
 	font-weight:600;
 	}
-#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading h4, #dashboardmain .panel-heading p {
-	margin:0;
+#gsselected .panel-heading h4, #gsselected .panel-heading p, #dashboardmain .panel-heading h4, #dashboardmain .panel-heading p, #editowner .panel-heading p {
+	margin:.1em;
 	color:#333/*#fff*/;
 	}
-#gsselected button.close, #dashboardmain button.close {
+#gsselected button.close, #dashboardmain button.close, #editowner button.close {
     font-size: 1.45em;
 	color:#111;
 	margin: 0 auto;
+	height:1em;
+	}
+#editowner button.close {
+    font-size: 3em;
+	height:1.06em;
 	}
 .closepans {
 	display:flex;
 	display: -webkit-flex;
 	flex: 1;
+	}
+#editowner .closepans {
+	padding: 0;
+    padding-right: 15px;
+	display:block;
+	flex:0;
+	}
+#announcements .closepans {
+	height:20px;
+	}
+#announcements .closegspanels {
+	line-height:20px;
 	}
 #displaytext, p#showmarktxt {
 	display: -webkit-flex; 
@@ -1893,7 +1956,7 @@ button[type=submit] {
 	word-break:break-all;
 	min-height: 149px;
 	}
-#gsselected .panel-heading, #dashboardmain .panel-heading {
+#gsselected .panel-heading, #dashboardmain .panel-heading, #editowner .panel-heading {
 	-webkit-border-top-left-radius: 		0;
     -webkit-border-top-right-radius: 		0;
 	-webkit-border-bottom-left-radius: 		0;
@@ -1910,51 +1973,75 @@ button[type=submit] {
     background-color: #D9D9D6;
 	padding: 14px 15px;
 	}
-#gsselected .panel-default, #dashboardmain .panel-default {
+#gsselected .panel-default, #dashboardmain .panel-default, #editowner .panel-default {
 	border:none!important;
 	}
-#gsselected .panel-title p, #dashboardmain .panel-title p {
+#gsselected .panel-title p, #dashboardmain .panel-title p, #editowner .panel-title p {
 	font-size: 1.3em!important;
 	}
-#gsselected .panel-group {
+#gsselected .panel-group, #editowner .panel-group {
 	margin-bottom: 1.5em;
 	padding:0;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
+	white-space: normal;
+	}
+#editowner .panel-group .email {
+	-ms-hyphens: none;
+	-moz-hyphens: none;
+	-webkit-hyphens: none;
+	hyphens: none;
+	}
+#editowner .panel-group, #editowner .panel-group .Accordion {
+	margin-bottom: 1em;
+	margin-top: 1em;
 	}
 #dashboardmain .panel-group {
 	padding:15px;
 	margin-bottom:12px;
 	padding-top:0;
 	}
-#gsselected .panel-group .panel, #dashboardmain .panel-group .panel {
+#gsselected .panel-group .panel, #dashboardmain .panel-group .panel, #editowner .panel-group .panel {
 	-webkit-border-radius: 	2px;
     -moz-border-radius: 	2px;
     border-radius: 			2px;
 	}
-#gsselected .panel-default>.panel-heading, #dashboardmain .panel-default>.panel-heading {
+#gsselected .panel-default>.panel-heading, #dashboardmain .panel-default>.panel-heading, #editowner .panel-default>.panel-heading {
     color:#333/*#FFF*/;
     background-color:#eee/*#F3D54E*/;
 	font-size:.8em;
 	width: 100%;
 	border:none!important;
 	}
+#editowner .panel-default>.panel-heading {
+    background-color:transparent;
+	border:1px solid #eee!important;
+	}
 #dashboardmain .panel-default>.panel-heading {
     background-color:#F3D54E;
 	}
-#gsselected .panel-default>.panel-heading .number, #dashboardmain .panel-default>.panel-heading .number {
+#gsselected .panel-default>.panel-heading .number, #dashboardmain .panel-default>.panel-heading .number, #editowner .panel-default>.panel-heading .number {
 	color:#333/*#FFF*/;
 	}
-#gsselected .panel-default>.panel-heading .name, #dashboardmain .panel-default>.panel-heading .name {
+#gsselected .panel-default>.panel-heading .name, #dashboardmain .panel-default>.panel-heading .name, #editowner .panel-default>.panel-heading .name {
 	color:#EEEEE;
 	}
-#gsselected .panel-default>.panel-heading, #dashboardmain .panel-default>.panel-heading {
+#gsselected .panel-default>.panel-heading, #dashboardmain .panel-default>.panel-heading, #editowner .panel-default>.panel-heading {
 	color:#EEEEEE;
 	letter-spacing: 0.03em;
 	}
-#gsselected .panel, #dashboardmain .panel {
+#gsselected .panel, #dashboardmain .panel, #editowner .panel {
 	-webkit-box-shadow: 0 0 0 rgba(0,0,0,0);
     box-shadow: 0 0 0 rgba(0,0,0,0);
 	}
-/* END GSselected panel */
+/* END GSselected, Dashboard, Editowner panel */
 /* CLONE */
 #clonecontainer {
     display: block;
@@ -1973,7 +2060,7 @@ footer {
     top: 100%;
     width: 100%;
 	background-color: #222222;
-	margin-top:260px;
+	margin-top:360px;
 	}
 footer p {
 	font-size:.7em;
@@ -2184,6 +2271,14 @@ a.footer-brand {
     	padding-left: 0;
 		}
 }
+@media (max-width: 991px) {
+	#editowner .inlinebuttons {
+		margin-top:1em;
+		}
+	#editowner .btn-success.add {
+		margin-top: 0;
+		}
+	}
 @media (max-width: 1199px) {
 	btn.fill, .btn-success.fill, .btn-default.fill  {	
 		margin:0 auto;
