Owner Info Review CSS
Owner Info Review page - rev Button padding, style was over-written

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1198,6 +1198,7 @@ label.disabled span {
 	}
 #editowner .btn-success.add {
     margin-top: 1.99993em;
+	padding: 5px 10px;
 	}
 #editowner .btn-group {
 	width:40px;
