Client Change Req + Hover Fix
Hover fix for close button, 'Owner review', client Change Req. 'Additional Info' page

--- a/css/lynnstyles.css
+++ b/css/lynnstyles.css
@@ -1735,6 +1735,9 @@ div[role="radiogroup"] {
 	-ms-user-select: none;
 	user-select: none;
 	}
+.form-group .form-group-md.radiocontainer {
+	margin-left:1em;
+	}
 .radiocontainer input {
 	position: absolute;
 	left:-10000px;
